force-app/main/default/objects/Borrower_Checklist__mdt/Borrower_Checklist__mdt.object-meta.xml
<CustomObject>
    <label>Borrower Checklist</label>
    <pluralLabel>Borrower Checklists</pluralLabel>
</CustomObject>