force-app/main/default/objects/Borrower_Checklist__mdt/fields/Is_Subtab__c.field-meta.xml
<CustomField>
    <fullName>Is_Subtab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subtab</label>
    <type>Checkbox</type>
</CustomField>