force-app/main/default/objects/Borrower_Checklist__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term_Loan</fullName>
                <default>true</default>
                <label>Term_Loan</label>
            </value>
            <value>
                <fullName>LOC_Loan</fullName>
            </value>
            <value>
                <fullName>LOC_Construction</fullName>
            </value>
            <value>
                <fullName>Single_Asset_Bridge_Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>